2001-09-25 Tuesday 19:26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.51), Makefile.am (1.4), configure.in (1.17),
	man/.cvsignore (1.1), man/Makefile.am (1.1), man/man3/.cvsignore
	(1.1), man/man3/Makefile.am (1.1): Add Makefiles for man pages.

2001-09-22 Saturday 15:19  poonlap

	* src/Makefile.am (1.12): Thwbrk is not listed in the
	library(typo-error), fixed.

2001-09-17 Monday 08:53  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* AUTHORS (1.4), ChangeLog (1.50), include/thai/thwinp.h (1.4): Add
	K.Poonlap to AUTHORS. Rename thwciscompose() to thwcisaccept().

2001-09-16 Sunday 21:59  poonlap

	* man/: template.3 (1.1), man3/thctype.3 (1.1), man3/wtt.3 (1.1):
	Create first man pages for thctype.3, wtt.3 Also template.3

2001-09-14 Friday 21:36  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.48), configure.in (1.16), include/thai/thwctype.h
	(1.3), src/Makefile.am (1.11), src/thwctype/.cvsignore (1.1),
	src/thwctype/Makefile.am (1.1), ChangeLog (1.49),
	src/thwctype/thwctype.c (1.1): Add a quick implementation of
	thwctype.

2001-09-14 Friday 21:07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/: test_thbrk.c (1.5), test_thcell.c (1.5): Fix warning.

2001-09-14 Friday 21:05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.47), src/thwchar/Makefile.am (1.3),
	src/thwchar/hashtbl.c (1.2), src/thwchar/hashtbl.h (1.2),
	src/thwchar/thwchar.c (1.7): Remove hashing. Use simple linear
	search, to get rid of memory leak.

2001-09-14 Friday 20:48  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.46), include/thai/thwchar.h (1.8),
	src/thwchar/thwchar.c (1.6): Use lazy creation for hash tables.

2001-09-14 Friday 00:54  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* ChangeLog (1.45), include/thai/thwchar.h (1.7),
	src/thwchar/Makefile.am (1.2), src/thwchar/hashtbl.c (1.1),
	src/thwchar/hashtbl.h (1.1), src/thwchar/thwchar.c (1.5): Implement